--- a/fakeseiten-htmls/Shopping-404.html
+++ b/fakeseiten-htmls/Shopping-404.html
@@ -54,7 +54,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <table border="0" cellspacing="0" cellpadding="0" width=100% bgcolor=#ffffff>
 <tr>
-<td bgcolor=#003869><a href="" class="navi_o"><img src="img/o2.gif" width="240" height="80" border=0 alt="zur&uuml;ck zur Startseite"></a></td>
+<td bgcolor=#003869><a href="./Shopping-404.html" class="navi_o"><img src="img/o2.gif" width="240" height="80" border=0 alt="zur&uuml;ck zur Startseite"></a></td>
 </td>
 <td colspan=2 align=center bgcolor=#003869>
 
@@ -67,7 +67,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <table cellspacing=0 cellpadding=0 width=100%><tr><td width=50%>
 
 <table align=right valign=absmiddle cellspacing=0 cellpadding=0>
-<form action="" method="get">
+<form action="./Shopping-404.html" method="get">
 <tr>
 <td><img src=\"img/1x1.gif\" width=1 height=26 align=left></td>
 
@@ -396,7 +396,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <table width=100% cellspacing=0 cellpadding=1 bgcolor=#003869>
   <tr>
     <td bgcolor=#B3C4D2 class=c4>
-      &nbsp;<font color=#000000><b>Angebote von Anderen</b></font>
+      &nbsp;<font color=#000000><b>ERROR</b></font>
     </td>
   </tr>
   <tr>
@@ -405,7 +405,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
         <tr>
           <td class=c valign=top width=25% align=center></td>
           <td class=c valign=top width=50% align=center>
-            <img src="img/banner.png" alt="Banner" style="max-width:100%; height:auto;">
+            <img src="img/banner-404.png" alt="Banner" style="max-width:100%; height:auto;">
           </td>
           <td class=c valign=top width=25% align=center></td>
         </tr>
