--- a/fakeseiten-htmls/Shopping-404.html
+++ b/fakeseiten-htmls/Shopping-404.html
@@ -437,33 +437,33 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <tr><td class=c4>&nbsp;<b><font color=#000000>Billig einkaufen per Online Shopping bei SuperSchn&auml;ppchen24.aculi.de</font></b></td></tr>
 <tr><td bgcolor=#003869><img src="1x1.gif" width=1 height=1></td></tr>
 <tr><td class=k bgcolor=#003869>
-<table width=100% cellspacing=1 cellpadding=0 bgcolor=#ffffff> <tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>SexShop24 - Bisschen AHH heute nacht ...</font></a>
+<table width=100% cellspacing=1 cellpadding=0 bgcolor=#ffffff> <tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>SexShop24 - Bisschen AHH heute nacht ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Pferdeparadies - Alles &uuml;r dein Pferd ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Pferdeparadies - Alles &uuml;r dein Pferd ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Fit & Gesund - Deine Gesundheitsquelle ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Fit & Gesund - Deine Gesundheitsquelle ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Reitertraum - Der Reitsport-Shop ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Reitertraum - Der Reitsport-Shop ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Pferdefreunde - Alles f&uuml;r den Reiter ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Pferdefreunde - Alles f&uuml;r den Reiter ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>BeautyHaven - Wo Sch&oumlnheit beginnt ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>BeautyHaven - Wo Sch&oumlnheit beginnt ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Pferdezentrum - Dein Reitbedarf online ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Pferdezentrum - Dein Reitbedarf online ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Elegante Erlebnisse - Stile f&uuml;r jeden Anlass ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Elegante Erlebnisse - Stile f&uuml;r jeden Anlass ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Nature's Remedies - Nat&uuml;rlich gesund ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Nature's Remedies - Nat&uuml;rlich gesund ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Vitality Boost - Energie f&uuml;r jeden Tag ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Vitality Boost - Energie f&uuml;r jeden Tag ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>WebNavigator - Dein Wegweiser im Netz ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>WebNavigator - Dein Wegweiser im Netz ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>KreditKompass - Immer den besten Kurs ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>KreditKompass - Immer den besten Kurs ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Ern&auml;hrungsberater - F&uuml;r dein Wohlbefinden ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Ern&auml;hrungsberater - F&uuml;r dein Wohlbefinden ...</font></a>
 </td></tr>
-<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Bilderrahmen Galerie - Kunst f&uuml;r dein Zuhause ...</font></a>
+<tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Bilderrahmen Galerie - Kunst f&uuml;r dein Zuhause ...</font></a>
 </td></tr>
 
 </table>
@@ -494,17 +494,17 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <tr><td class=c4>&nbsp;<b><font color=#000000>Shops aktuell ...</font></b></td></tr>
 <tr><td bgcolor=#003869><img src="1x1.gif" width=1 height=1></td></tr>
 <tr><td class=k bgcolor=#003869>
-<table width=100% cellspacing=1 cellpadding=0 bgcolor=#ffffff> <tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="http://partners.webmasterplan.com/click.asp?ref=203482&site=2945&type=b6&bnb=6" target="_blank" class=k><font color=#000000>Conrad.de ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Flauschi-Foods - F&uuml;r ein kuscheliges Essen ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Pixel-Pizza - Die schnellste Lieferung ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Witzige Widgets - Mach dein Leben lustig ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Schmunzel-Schuhe - Laufen mit einem L&auml;cheln ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Fluffige Freizeit - F&uuml;r den besten Chill ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Kuriosit&auml;ten-Keller - Entdecke das Ungew&oumlhnliche ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Super-Schn&auml;ppchen - Wo Preise purzeln ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Gl&uuml;cks-Gadgets - F&uuml;r die besonderen Momente ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Traumhafte Textilien - Schlaf dich sch&oumln ...</font></a>
-</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html" target="_blank" class=k><font color=#000000>Quirliger Quatsch - Spass f&uuml;r jeden Tag ...</font></a>
+<table width=100% cellspacing=1 cellpadding=0 bgcolor=#ffffff> <tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="http://partners.webmasterplan.com/click.asp?ref=203482&site=2945&type=b6&bnb=6"  class=k><font color=#000000>Conrad.de ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Flauschi-Foods - F&uuml;r ein kuscheliges Essen ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Pixel-Pizza - Die schnellste Lieferung ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Witzige Widgets - Mach dein Leben lustig ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Schmunzel-Schuhe - Laufen mit einem L&auml;cheln ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Fluffige Freizeit - F&uuml;r den besten Chill ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Kuriosit&auml;ten-Keller - Entdecke das Ungew&oumlhnliche ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Super-Schn&auml;ppchen - Wo Preise purzeln ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Gl&uuml;cks-Gadgets - F&uuml;r die besonderen Momente ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Traumhafte Textilien - Schlaf dich sch&oumln ...</font></a>
+</td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Quirliger Quatsch - Spass f&uuml;r jeden Tag ...</font></a>
 </td></tr></table>
 </td></tr>
 <tr><td bgcolor=#003869><img src="1x1.gif" width=1 height=1></td></tr>
