--- a/fakeseiten-htmls/Shopping-404.html
+++ b/fakeseiten-htmls/Shopping-404.html
@@ -494,7 +494,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <tr><td class=c4>&nbsp;<b><font color=#000000>Shops aktuell ...</font></b></td></tr>
 <tr><td bgcolor=#003869><img src="1x1.gif" width=1 height=1></td></tr>
 <tr><td class=k bgcolor=#003869>
-<table width=100% cellspacing=1 cellpadding=0 bgcolor=#ffffff> <tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="http://partners.webmasterplan.com/click.asp?ref=203482&site=2945&type=b6&bnb=6"  class=k><font color=#000000>Conrad.de ...</font></a>
+<table width=100% cellspacing=1 cellpadding=0 bgcolor=#ffffff> <tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Kockrad ...</font></a>
 </td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Flauschi-Foods - F&uuml;r ein kuscheliges Essen ...</font></a>
 </td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Pixel-Pizza - Die schnellste Lieferung ...</font></a>
 </td></tr><tr><td class=k valign=top><img src="img/p2.gif" border=0>&nbsp;</td><td class=k><a href="./Shopping-404.html"  class=k><font color=#000000>Witzige Widgets - Mach dein Leben lustig ...</font></a>
