--- a/fakeseiten-htmls/Computer.html
+++ b/fakeseiten-htmls/Computer.html
@@ -87,6 +87,7 @@ function textlist() {
 	this.items = Array.from(arguments);
 }
 
+var tl = new textlist(
 "Wichtige Information!!!!",
 "Aufgrund von Wartungsarbeiten",
 "sind alle anderen Seiten außer dieser",
